--- a/templates/404.html
+++ b/templates/404.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>My blog</title>
+  <title>Modern Business - Start Bootstrap Template</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -17,6 +17,7 @@
   <link href="css/modern-business.css" rel="stylesheet">
 
 </head>
+
 <body>
 
   <!-- Navigation -->
@@ -59,15 +60,15 @@
               <a class="dropdown-item" href="blog-post.html">Blog Post</a>
             </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item active dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Other Pages
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
               <a class="dropdown-item" href="full-width.html">Full Width Page</a>
               <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
               <a class="dropdown-item" href="faq.html">FAQ</a>
-              <a class="dropdown-item" href="404.html">404</a>
+              <a class="dropdown-item active" href="404.html">404</a>
               <a class="dropdown-item" href="pricing.html">Pricing Table</a>
             </div>
           </li>
@@ -76,6 +77,107 @@
     </div>
   </nav>
 
+  <!-- Page Content -->
+  <div class="container">
+
+    <!-- Page Heading/Breadcrumbs -->
+    <h1 class="mt-4 mb-3">404
+      <small>Page Not Found</small>
+    </h1>
+
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item">
+        <a href="index.html">Home</a>
+      </li>
+      <li class="breadcrumb-item active">404</li>
+    </ol>
+
+    <div class="jumbotron">
+      <h1 class="display-1">404</h1>
+      <p>The page you're looking for could not be found. Here are some helpful links to get you back on track:</p>
+      <ul>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="about.html">About</a>
+        </li>
+        <li>
+          <a href="services.html">Services</a>
+        </li>
+        <li>
+          <a href="contact.html">Contact</a>
+        </li>
+        <li>
+          Portfolio
+          <ul>
+            <li>
+              <a href="portfolio-1-col.html">1 Column Portfolio</a>
+            </li>
+            <li>
+              <a href="portfolio-2-col.html">2 Column Portfolio</a>
+            </li>
+            <li>
+              <a href="portfolio-3-col.html">3 Column Portfolio</a>
+            </li>
+            <li>
+              <a href="portfolio-4-col.html">4 Column Portfolio</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          Blog
+          <ul>
+            <li>
+              <a href="blog-home-1.html">Blog Home 1</a>
+            </li>
+            <li>
+              <a href="blog-home-2.html">Blog Home 2</a>
+            </li>
+            <li>
+              <a href="blog-post.html">Blog Post</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          Other Pages
+          <ul>
+            <li>
+              <a href="full-width-page.html">Full Width Page</a>
+            </li>
+            <li>
+              <a href="sidebar.html">Sidebar Page</a>
+            </li>
+            <li>
+              <a href="faq.html">FAQ</a>
+            </li>
+            <li>
+              <a href="404.html">404 Page</a>
+            </li>
+            <li>
+              <a href="pricing-table.html">Pricing Table</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <!-- /.jumbotron -->
+
+  </div>
+  <!-- /.container -->
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
