--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,14 @@
 
   <title>My blog</title>
 
+  <!--  Favicon-->
+  <link rel="icon" href="{% static 'pages/img/favicon.ico' %}">
+
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="{% static 'pages/libs/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/modern-business.css" rel="stylesheet">
+  <link href="{% static 'pages/css/modern-business.css' %}" rel="stylesheet">
 
 </head>
 <body>
@@ -29,7 +32,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
