--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="">
 
   <title>Modern Business - Start Bootstrap Template</title>
-  
+
   <!--  Favicon-->
   <link rel="icon" href="{% static 'pages/img/favicon.ico' %}">
 
@@ -25,7 +25,7 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-danger fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">Start Bootstrap</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -284,9 +284,8 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="{% static 'pages/libs/jquery/jquery.min.js' %}"></script>
+  <script src="{% static 'pages/libs/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
