--- a/templates/index.html
+++ b/templates/index.html
@@ -13,21 +13,18 @@
         <div class="carousel-item active" style="background-image: url('../static/pages/img/fp_scene.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h3>Баллет Прокофьев</h3>
-            <p>This is a description for the first slide.</p>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('../static/pages/img/fp_girls.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Second Slide</h3>
-            <p>This is a description for the second slide.</p>
+            <h3>Баллет "Белоснежка"</h3>
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('../static/pages/img/fp_guys.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Third Slide</h3>
-            <p>This is a description for the third slide.</p>
+            <h3>Баллет Петипа</h3>
           </div>
         </div>
       </div>
@@ -85,9 +82,7 @@
 <!--    </div>-->
     <!-- /.row -->
 
-    <!-- Portfolio Section -->
-    <h2>Events</h2>
-
+    <!-- Events Section -->
 
     <div class="row">
       {% for event in object_list %}
