--- a/templates/index.html
+++ b/templates/index.html
@@ -88,12 +88,13 @@
       {% for event in object_list %}
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="{{ event.poster.url }}"></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">{{ event.title }}</a>
             </h4>
             <p class="card-text">{{ event.description }}</p>
+            <p class="card-text">{{ event.poster.url }}</p>
             <p class="card-text">{{ event.date_added }}</p>
           </div>
         </div>
